@@ -6,7 +6,7 @@
 #
 # Copyright (c) 2000 by Zveno Pty Ltd.
 #
-# RCS: @(#) $Id: uri.test,v 1.3 2000/07/04 02:28:58 steve Exp $
+# RCS: @(#) $Id: uri.test,v 1.4 2000/07/20 18:44:41 ericm Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -82,6 +82,10 @@ test uri-4.1 {uri::geturl} {
 test uri-5.1 {uri::canonicalize} {
     uri::canonicalize http://www.test.net/path1/./remove/../path2/resource
 } http://www.test.net/path1/path2/resource
+
+test uri-5.2 {uri::canonicalize infinite loop} {
+    uri::canonicalize http://www.test.net/../path2/resource
+} {http://www.test.net/path2/resource}
 
 ::tcltest::cleanupTests
 return
